[gd_scene load_steps=23 format=2]

[ext_resource path="res://Abilities/Abilities/HomingAttack.gd" type="Script" id=1]
[ext_resource path="res://Effects/Projectiles/Thunder Effect 01/Projectile 2/Projectile 2 wo blur.png" type="Texture" id=2]

[sub_resource type="CapsuleShape2D" id=28]
radius = 8.0
height = 4.0

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 2 )
region = Rect2( 384, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 2 )
region = Rect2( 432, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 2 )
region = Rect2( 480, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 2 )
region = Rect2( 528, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 2 )
region = Rect2( 576, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 2 )
region = Rect2( 624, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 2 )
region = Rect2( 672, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 2 )
region = Rect2( 720, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 48, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 96, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 144, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 192, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 240, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 2 )
region = Rect2( 288, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 2 )
region = Rect2( 336, 0, 48, 48 )

[sub_resource type="SpriteFrames" id=17]
animations = [ {
"frames": [ SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ) ],
"loop": true,
"name": "flying",
"speed": 8.0
}, {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": false,
"name": "start",
"speed": 16.0
} ]

[sub_resource type="Animation" id=26]
resource_name = "start"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ "start", "flying" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:frame")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="CircleShape2D" id=27]
radius = 232.297

[node name="BulletNode" type="Area2D"]
collision_layer = 1024
collision_mask = 0
script = ExtResource( 1 )
max_hits_before_destruct = 6
bullet_duration = 6.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource( 28 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 17 )
animation = "start"
frame = 7
playing = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/start = SubResource( 26 )

[node name="SeekArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 0

[node name="SeekAreaCollisionShape" type="CollisionShape2D" parent="SeekArea"]
shape = SubResource( 27 )

[connection signal="area_entered" from="." to="." method="_on_BulletNode_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_BulletNode_body_entered"]
